[tool.poetry]
name = "bigip-cli"
version = "0.1.0"
description = ""
authors = ["Diego Roccia <diego.roccia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
f5-sdk = "^3.0.21"
tabulate = "^0.8.7"
click = "^7.1.2"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
